# DocAnon

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
core/: ai_client.py  analyze.py  batch_pipeline.py  config.py  deanon.py  engine.py  entity_filter.py  golden.py  mapping.py  metrics.py  models.py  morpho.py  ner_config.py  person_canon.py  pipeline.py  xlsx_cells.py  xlsx_enrich.py
exporters/: base.py  docx_exporter.py  json_exporter.py  txt_exporter.py  xlsx_exporter.py
extractors/: __init__.py  base.py  docx_extractor.py  image_extractor.py  pdf_extractor.py  txt_extractor.py  xlsx_extractor.py
gui/: file_list_panel.py  highlight.py  main_window.py  restore_panel.py  settings_panel.py
recognizers/: bank_recognizer.py  driver_license.py  geo_coords.py  inn_recognizer.py  mac_recognizer.py  oms_recognizer.py  passport_recognizer.py  phone_recognizer.py  snils_recognizer.py  tg_chat_id.py  vehicle_plate.py
test_docs/: Дебиторская_задолженность.xlsx  Договор_поставки.docx  Клиенты.xlsx  Отчет_менеджера_январь.docx  Продажи_январь.xlsx
tests/: test_config_thresholds.py  test_entity_filter.py  test_golden.py  test_mapping.py  test_ner_morpho.py  test_person_canon.py  test_phase_d.py  test_recognizers.py  test_smoke_docs.py  test_xlsx_enrich.py  test_xlsx_exporter.py  test_xlsx_extractor.py
tests/fixtures/: test_contract.txt
tests/fixtures/gold/: dogovor_postavki.json  klienty_xlsx.json  structured_ids.json  test_contract.json
