[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "docanon"
version = "0.1.0"
description = "Локальный анонимизатор документов по 152-ФЗ"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DocAnon"}
]
keywords = ["anonymizer", "152-fz", "pii", "privacy", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "presidio-analyzer>=2.0.0",
    "presidio-anonymizer>=2.0.0",
    "spacy>=3.7.0",
    "pymorphy3>=2.0.0",
    "PySide6>=6.6.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "cryptography>=42.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
docanon = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "extractors*", "recognizers*", "exporters*", "gui*"]
